--- a/client/src/assets/sass/core/variables/_variables.scss
+++ b/client/src/assets/sass/core/variables/_variables.scss
@@ -27,12 +27,12 @@ $grays: map-merge(
   $grays
 );
 
-$primary: #975AFF !default;
+$primary: #009DFF !default;
 $success: #40C057 !default;
 $info: #2F8BE6 !default;
 $warning: #F77E17 !default;
 $danger: #F55252 !default;
-$secondary: #616D89 !default;
+$secondary: #59BFFF !default;
 $light: #DBDEE5 !default;
 $dark: #1A051D !default;
 
