updated template styles and folder structure, added root ngrx

--- a/client/src/app/layouts/admin/admin-layout.component.html
+++ b/client/src/app/layouts/admin/admin-layout.component.html
@@ -6,8 +6,7 @@
 
   <!-- *SIDE* Menu starts -->
   <div appSidebar class="app-sidebar main-menu" (mouseenter)="sidebarMouseenter($event)"
-    (mouseleave)="sidebarMouseleave($event)" data-active-color="white" [attr.data-background-color]="bgColor"
-    [attr.data-image]="bgImage">
+    (mouseleave)="sidebarMouseleave($event)" data-active-color="white" [attr.data-background-color]="bgColor">
     <app-side-menu></app-side-menu>
   </div>
   <!-- *SIDE* Menu ends -->
