--- a/client/src/app/pages/full-pages/login/login-page.component.scss
+++ b/client/src/app/pages/full-pages/login/login-page.component.scss
@@ -1,3 +1,7 @@
+.login {
+  background-color: #e0e0e0 !important;
+}
+
 .alert-light-danger {
   background-color: #FEEFD0 !important;
   color: #F55252  !important;
