--- a/client/src/app/modules/dashboard/pages/login/login-page.component.html
+++ b/client/src/app/modules/dashboard/pages/login/login-page.component.html
@@ -33,7 +33,7 @@
                     <!-- <a [routerLink]="['/pages/forgotpassword']">Forgot Password?</a> -->
                   </div>
                   <div class="d-flex justify-content-between flex-sm-row flex-column">
-                    <a [routerLink]="['/register']" class="btn bg-light-primary mb-2 mb-sm-0">Register</a>
+                    <a [routerLink]="['/dashboard','register']" class="btn bg-light-primary mb-2 mb-sm-0">Register</a>
                     <a class="btn btn-primary" (click)="onSubmit()">Login</a>
                   </div>
                 </form>
