--- a/client/src/app/modules/dashboard/pages/register/register-page.component.html
+++ b/client/src/app/modules/dashboard/pages/register/register-page.component.html
@@ -11,15 +11,19 @@
                 <p>Fill the below form to create a new account.</p>
                 <form [formGroup]="registerForm">
                   <div *ngFor="let control of controls">
-                    <app-form-control [formControlName]="control.options.name"
-                      [placeholder]="control.options.placeholder" [isFormSubmitted]="registerFormSubmitted">
+                    <app-form-control [formControlName]="control.name" [type]="control.type"
+                      [placeholder]="control.placeholder" [isFormSubmitted]="registerFormSubmitted">
                     </app-form-control>
                   </div>
+                  <app-alert></app-alert>
                   <div class="d-flex justify-content-between flex-sm-row flex-column">
                     <app-button [outline]="true" [routerLink]="['/dashboard', 'login']">Back To Login</app-button>
                     <app-button type="submit" (onClick)="onSubmit()">Register</app-button>
                   </div>
                 </form>
+                <div class="d-flex justify-content-between align-items-center">
+                  <ngx-spinner></ngx-spinner>
+                </div>
               </div>
             </div>
           </div>
