--- a/client/src/app/modules/dashboard/pages/login/login-page.component.html
+++ b/client/src/app/modules/dashboard/pages/login/login-page.component.html
@@ -38,7 +38,7 @@
                   </div>
                 </form>
                 <div class="d-flex justify-content-between align-items-center">
-                  <ngx-spinner></ngx-spinner>
+                  <!-- <ngx-spinner></ngx-spinner> -->
                 </div>
               </div>
             </div>
