--- a/client/src/app/shared/components/ui-elements/alert/alert.component.html
+++ b/client/src/app/shared/components/ui-elements/alert/alert.component.html
@@ -3,7 +3,7 @@
     <ngb-alert type="light-danger" class="bg-light-danger mb-2" [dismissible]="false">
       <div class="alert-icon-left">
         <i class="ft-alert-triangle mr-2"></i>
-        <span>{{alert.message}}</span>
+        <span>{{alert.message || 'Something went wrong!'}}</span>
       </div>
     </ngb-alert>
   </ng-container>
