--- a/client/src/app/shared/components/ui-elements/form-control/form-control.component.html
+++ b/client/src/app/shared/components/ui-elements/form-control/form-control.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
   <input class="form-control mb-2" [type]="type" [placeholder]="placeholder" [value]="value"
     (input)="onChange($event.target.value)" (blur)="onTouched()"
-    [ngClass]="{ 'is-invalid': ngControl.control.dirty && !ngControl.control.valid, 'is-valid': ngControl.control.dirty && ngControl.control.valid }"
+    [ngClass]="{ 'is-invalid': (isFormSubmitted && ngControl.control.invalid) || (ngControl.control.dirty && ngControl.control.invalid), 'is-valid': (isFormSubmitted && ngControl.control.invalid) || (ngControl.control.dirty && ngControl.control.valid) }"
     [required]="isRequired">
-  <div *ngIf="isFormSubmitted && (!ngControl.control.valid || ngControl.control.errors)"
+  <div *ngIf="isFormSubmitted && (ngControl.control.invalid || ngControl.control.errors)"
     class="help-block mt-1 text-danger"> <i class="ft-alert-circle align-middle"></i>
     {{ngControl.control.errors? ngControl.control.errors.required? placeholder+' is required' :
     ngControl.control.errors.email? 'Email is invalid' : ngControl.control.errors.mustMatch? 'Passwords must match' :
@@ -12,6 +12,6 @@
     :''}}</div>
   <div *ngFor="let error of errors">
     <div
-      *ngIf="isFormSubmitted && (!ngControl.control.valid || (ngControl.control.errors && ngControl.control.errors[error.errName]))"
+      *ngIf="isFormSubmitted && (ngControl.control.invalid || (ngControl.control.errors && ngControl.control.errors[error.errName]))"
       class="help-block mt-1 text-danger"> <i class="ft-alert-circle align-middle"></i> {{error.errMsg}}</div>
   </div>
