--- a/client/src/app/shared/components/ui-elements/button/button.component.html
+++ b/client/src/app/shared/components/ui-elements/button/button.component.html
@@ -1,4 +1,3 @@
-<button class="btn mb-2 mb-sm-0" type="type" (click)="onClickButton($event)"
-  [ngClass]="colorClass">
+<button class="btn px-4" type="type" (click)="onClickButton($event)" [ngClass]="colorClass" [disabled]="disabled">
   <ng-content></ng-content>
 </button>
