--- a/client/src/assets/sass/bootstrap-extended/_buttons.scss
+++ b/client/src/assets/sass/bootstrap-extended/_buttons.scss
@@ -9,6 +9,9 @@
   &:hover {
     box-shadow: 0 2px 7px rgba($black, 0.28);
     cursor: pointer;
+    &:disabled {
+      cursor: default;
+    }
   }
 }
 // warning button
@@ -62,22 +65,23 @@ button {
 }
 
 // Buttons
-.btn-group, .input-group {
-  span{
+.btn-group,
+.input-group {
+  span {
     &:first-child:not(:last-child) {
-      .btn.dropdown-toggle{
+      .btn.dropdown-toggle {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
       }
     }
     &:last-child:not(:first-child) {
-      .btn.dropdown-toggle{
+      .btn.dropdown-toggle {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
       }
     }
     &:not(:last-child):not(:first-child) {
-      .btn.dropdown-toggle{
+      .btn.dropdown-toggle {
         border-radius: 0;
       }
     }
