--- a/client/src/app/modules/dashboard/pages/login/login-page.component.html
+++ b/client/src/app/modules/dashboard/pages/login/login-page.component.html
@@ -1,51 +1,25 @@
-<!--Login Page Starts-->
-<section id="login" class="bg-overlay">
-  <div class="row auth-height full-height-vh m-0">
-    <div class="col-12 d-flex align-items-center justify-content-center">
-      <div class="card overflow-hidden">
-        <div class="card-content">
-          <div class="card-body auth-img">
-            <div class="row m-0">
-              <div class="col-12 px-4 py-3">
-                <h4 class="mb-2 card-title">Login</h4>
-                <p>Welcome back, please login to your account.</p>
-                <ngb-alert type="light-danger" class="mb-2" *ngIf="isLoginFailed" (close)="isLoginFailed = false">
-                  <p class="mb-0">Login failed!</p>
-                </ngb-alert>
-                <form [formGroup]="loginForm">
-                  <div class="form-group">
-                    <input type="text" formControlName="username" class="form-control" placeholder="Username"
-                      [ngClass]="{ 'is-invalid': loginFormSubmitted && lf.username.invalid, 'is-valid': loginFormSubmitted && !lf.username.invalid }"
-                      required>
-                    <div *ngIf="loginFormSubmitted && (lf.username.invalid || lf.username.errors?.required)"
-                      class="help-block mt-1 text-danger"> <i class="ft-alert-circle align-middle"></i> This is
-                      required</div>
-                  </div>
-                  <div class="form-group">
-                    <input type="password" formControlName="password" class="form-control" placeholder="Old Password"
-                      [ngClass]="{ 'is-invalid': loginFormSubmitted && lf.password.invalid, 'is-valid': loginFormSubmitted && !lf.password.invalid }"
-                      required>
-                    <div *ngIf="loginFormSubmitted && (lf.password.invalid || lf.password.errors?.required)"
-                      class="help-block mt-1 text-danger"> <i class="ft-alert-circle align-middle"></i> This is required
-                    </div>
-                  </div>
-                  <div class="d-sm-flex justify-content-between mb-3 font-small-2">
-                    <!-- <a [routerLink]="['/pages/forgotpassword']">Forgot Password?</a> -->
-                  </div>
-                  <div class="d-flex justify-content-between flex-sm-row flex-column">
-                    <a [routerLink]="['/dashboard','register']" class="btn bg-light-primary mb-2 mb-sm-0">Register</a>
-                    <a class="btn btn-primary" (click)="onSubmit()">Login</a>
-                  </div>
-                </form>
-                <div class="d-flex justify-content-between align-items-center">
-                  <!-- <ngx-spinner></ngx-spinner> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+<!--Login Page Start-->
+<app-dashboard>
+  <div class="border-bottom mb-3">
+    <h4 class="mb-2 card-title">Login</h4>
+    <p>Welcome back, please login to your account.</p>
+  </div>
+  <form [formGroup]="loginForm" #form="ngForm">
+    <ng-container *ngFor="let control of controls">
+      <app-form-control [formControlName]="control.name" [type]="control.type" [placeholder]="control.placeholder"
+        [isFormSubmitted]="form.submitted">
+      </app-form-control>
+    </ng-container>
+    <app-alert></app-alert>
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center my-2">
+        <app-button type="submit" (submit)="onSubmit()">Login</app-button>
+      </div>
+      <div class="col-12 d-flex justify-content-center my-2">
+        <span class="font-small-3">Don't have an account? <a
+            [routerLink]=" ['/dashboard', 'register' ]">Register</a></span>
       </div>
     </div>
-  </div>
-</section>
-<!--Login Page Ends-->
+  </form>
+</app-dashboard>
+<!--Login Page End-->
