--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,45 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light header-navbar">
-  <div class="container-fluid navbar-wrapper">
-    <div class="navbar-header d-flex">
-      <div class="navbar-toggle menu-toggle d-xl-none d-block float-left align-items-center justify-content-center"
-        data-toggle="collapse" (click)="toggleSidebar()">
-        <i class="ft-menu font-medium-3"></i>
+<ngx-spinner></ngx-spinner>
+<ng-container *ngrxLet="userData$ as user">
+  <nav class="navbar navbar-expand-lg navbar-light header-navbar">
+    <div class="container-fluid navbar-wrapper">
+      <div class="navbar-header d-flex">
+        <div class="navbar-toggle menu-toggle d-xl-none d-block float-left align-items-center justify-content-center"
+          data-toggle="collapse" (click)="toggleSidebar()">
+          <i class="ft-menu font-medium-3"></i>
+        </div>
       </div>
-    </div>
-    <div class="navbar-container">
-      <div class="collapse navbar-collapse d-block" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="dropdown nav-item mr-1" placement="bottom-left" display="static" ngbDropdown>
-            <a class="nav-link dropdown-toggle user-dropdown d-flex align-items-end" id="dropdownBasic2"
-              href="javascript:;" data-toggle="dropdown" ngbDropdownToggle>
-              <div class="user d-md-flex d-none mr-2">
-                <span class="text-right">John Doe</span><span
-                  class="text-right text-muted font-small-3">Available</span>
+      <div class="navbar-container">
+        <div class="collapse navbar-collapse d-block" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="dropdown nav-item mr-1" placement="bottom-left" display="static" ngbDropdown>
+              <a class="nav-link dropdown-toggle user-dropdown d-flex align-items-end" id="dropdownBasic2"
+                href="javascript:;" data-toggle="dropdown" ngbDropdownToggle>
+                <app-avatar width="40" height="40"></app-avatar>
+              </a>
+              <div class="dropdown-menu text-center dropdown-menu-right m-0 pb-0" aria-labelledby="dropdownBasic2"
+                ngbDropdownMenu>
+                <div class="px-5 py-2">
+                  <app-avatar width="80" height="80">
+                  </app-avatar>
+                </div>
+                <div class="text-center pb-2">
+                  <span class="d-block">{{user.full_name}}</span>
+                  <span class="d-block font-small-3">{{user.username}}</span>
+                  <span class="d-block text-muted font-small-3">{{user.role}}</span>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" routerLink="/admin/account">
+                  <div class="d-flex align-items-center">
+                    <i class="ft-edit mr-2"></i><span>Account Settings</span>
+                  </div>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="logout()">
+                  <div class="d-flex align-items-center">
+                    <i class="ft-power mr-2"></i><span>Logout</span>
+                  </div>
+                </a>
               </div>
-              <img class="avatar" src="assets/img/portrait/small/avatar-s-1.png" alt="avatar" height="35" width="35" />
-            </a>
-            <div class="dropdown-menu text-left dropdown-menu-right m-0 pb-0" aria-labelledby="dropdownBasic2"
-              ngbDropdownMenu>
-              <a class="dropdown-item" routerLink="/pages/profile">
-                <div class="d-flex align-items-center">
-                  <i class="ft-edit mr-2"></i><span>Edit Profile</span>
-                </div>
-              </a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" routerLink="/pages/login">
-                <div class="d-flex align-items-center">
-                  <i class="ft-power mr-2"></i><span>Logout</span>
-                </div>
-              </a>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-
-
-
-
-
-</nav>
+  </nav>
+</ng-container>
