--- a/client/src/app/shared/components/ui-elements/form-control/form-control.component.html
+++ b/client/src/app/shared/components/ui-elements/form-control/form-control.component.html
@@ -1,11 +1,20 @@
 <ng-container *ngrxLet="serverValidation$ as validation">
   <div class="form-group">
     <label [for]="ngControl.name">{{placeholder}}</label>
-    <input [id]="ngControl.name" class="form-control mb-2" [type]="type" [placeholder]="placeholder" [value]="value"
-      (input)="onChange($event.target.value)" (blur)="onTouched()" [ngClass]="{
-        'is-invalid': (isFormSubmitted && ngControl.control.invalid) || (ngControl.control.dirty && ngControl.control.invalid) || validation.includes(ngControl.name),
-       'is-valid': (isFormSubmitted && ngControl.control.invalid) || (ngControl.control.dirty && ngControl.control.valid)
+    <ng-container *ngIf="type === 'textarea';else input">
+      <textarea rows="3" [id]="ngControl.name" class="form-control mb-2" [placeholder]="placeholder" [value]="value"
+        (input)="onChange($event.target.value)" (blur)="onTouched()" [ngClass]="{
+        'is-invalid': (isFormSubmitted && ngControl.control.invalid) || (isChanged && ngControl.control.dirty && ngControl.control.invalid) || validation.includes(ngControl.name),
+       'is-valid': (isFormSubmitted && ngControl.control.invalid) || (isChanged && ngControl.control.dirty && ngControl.control.valid)
+      }" [required]="isRequired"></textarea>
+    </ng-container>
+    <ng-template #input>
+      <input [id]="ngControl.name" class="form-control mb-2" [type]="type" [placeholder]="placeholder" [value]="value"
+        (input)="onChange($event.target.value)" (blur)="onTouched()" [ngClass]="{
+        'is-invalid': (isFormSubmitted && ngControl.control.invalid) || (isChanged && ngControl.control.dirty && ngControl.control.invalid) || validation.includes(ngControl.name),
+       'is-valid': (isFormSubmitted && ngControl.control.invalid) || (isChanged && ngControl.control.dirty && ngControl.control.valid)
       }" [required]="isRequired">
+    </ng-template>
     <div *ngIf="isFormSubmitted && (ngControl.control.invalid || ngControl.control.errors)"
       class="help-block mt-1 text-danger"> <i class="ft-alert-circle align-middle"></i>
       {{ngControl.control.errors? ngControl.control.errors.required? placeholder+' is required' :
