--- a/client/src/app/modules/admin/pages/account/account.component.html
+++ b/client/src/app/modules/admin/pages/account/account.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
         <div class="content-header">Account Settings</div>
-        <p class="content-sub-header mb-1">Configure account settings to your needs.</p>
+        <p class="content-sub-header mb-1">Configure account settings to your needs</p>
     </div>
 </div>
 <!-- Account Settings starts -->
