--- a/client/src/assets/sass/bootstrap-extended/_forms.scss
+++ b/client/src/assets/sass/bootstrap-extended/_forms.scss
@@ -284,6 +284,7 @@ form,
     display: flex;
     align-items: center;
     margin-bottom: 0;
+    cursor: pointer;
 
     // Before - Outer Circle
     &::before {
