--- a/client/src/app/modules/admin/pages/profile/profile.component.html
+++ b/client/src/app/modules/admin/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="col-6">
+    <div class="col-12">
         <div class="content-header">Edit Profile</div>
-        <p class="content-sub-header mb-1">Configure profile information to your needs.</p>
+        <p class="content-sub-header mb-1">Configure profile information to your needs</p>
     </div>
 </div>
 <div class="row">
