--- a/client/src/app/modules/dashboard/pages/login/login-page.component.html
+++ b/client/src/app/modules/dashboard/pages/login/login-page.component.html
@@ -13,7 +13,7 @@
     <app-alert></app-alert>
     <div class="row">
       <div class="col-12 d-flex justify-content-center my-2">
-        <app-button type="submit" (submit)="onSubmit()">Login</app-button>
+        <app-button class="px-4" type="submit" (submit)="onSubmit()">Login</app-button>
       </div>
       <div class="col-12 d-flex justify-content-center my-2">
         <span class="font-small-3">Don't have an account? <a
