--- a/client/src/app/shared/components/ui-elements/button/button.component.html
+++ b/client/src/app/shared/components/ui-elements/button/button.component.html
@@ -1,3 +1,4 @@
-<button class="btn px-4" type="type" (click)="onClickButton($event)" [ngClass]="colorClass" [disabled]="disabled">
+<button class="btn" [class]="class" type="type" (click)="onClickButton($event)" [ngClass]="colorClass"
+  [disabled]="disabled">
   <ng-content></ng-content>
 </button>
