--- a/client/src/assets/sass/core/layouts/_sidebar-content.scss
+++ b/client/src/assets/sass/core/layouts/_sidebar-content.scss
@@ -63,7 +63,7 @@
 
   &.menu-collapsed {
     .app-sidebar {
-      .navigation li.has-sub>a:after {
+      .navigation li.has-sub > a:after {
         display: none;
       }
     }
@@ -73,7 +73,7 @@
 body.nav-collapsed {
   .app-sidebar {
     &:hover {
-      .nav li.has-sub>a:after {
+      .nav li.has-sub > a:after {
         display: inherit;
       }
 
@@ -132,7 +132,7 @@ body.nav-collapsed {
 
 body {
   .app-sidebar .navigation li {
-    >a:before {
+    > a:before {
       content: "";
       display: block;
       z-index: -1;
@@ -156,11 +156,11 @@ body {
 
   &[data-menu="vertical-menu"] {
     .app-sidebar .navigation li {
-      &.active:not(.open)>a:before {
+      &.active:not(.open) > a:before {
         left: 0;
       }
 
-      &.active>a:before {
+      &.active > a:before {
         content: "";
         display: block;
         z-index: -1;
@@ -177,7 +177,7 @@ body {
   }
 
   &[data-menu="horizontal-menu"] {
-    .app-sidebar .navigation li.active>a:before {
+    .app-sidebar .navigation li.active > a:before {
       left: 0;
     }
   }
@@ -234,7 +234,10 @@ body {
     width: 30px;
     display: inline-block;
     max-height: 30px;
-    margin-right: 15px;
+    margin-right: 10px;
+    img {
+      width: 30px;
+    }
   }
 
   .navigation {
@@ -247,7 +250,7 @@ body {
       display: block;
 
       &.has-sub {
-        >a:after {
+        > a:after {
           content: "\e844";
           font-family: "feather";
           font-size: 1rem;
@@ -263,13 +266,13 @@ body {
           transition: all 200ms linear;
         }
 
-        >a {
+        > a {
           margin-bottom: 0;
         }
       }
 
       &.open {
-        >a:after {
+        > a:after {
           -webkit-transform: rotate(90deg);
           -moz-transform: rotate(90deg);
           -ms-transform: rotate(90deg);
@@ -277,12 +280,12 @@ body {
           transform: rotate(90deg);
         }
 
-        >a {
+        > a {
           background: rgba(map-get($grey-color, lighten-2), 0.2);
         }
       }
 
-      >a {
+      > a {
         display: block;
         overflow: hidden;
         line-height: $font-size-base * 2;
@@ -297,14 +300,14 @@ body {
       }
 
       &:not(.open) {
-        >ul {
+        > ul {
           display: none;
         }
       }
 
       &:hover,
       &.active {
-        >a {
+        > a {
           background: rgba(map-get($grey-color, lighten-2), 0.2);
         }
       }
@@ -394,7 +397,7 @@ body {
 
   .logo {
     position: relative;
-    padding: 0.5rem 0 0.5rem .95rem;
+    padding: 0.5rem 0 0.5rem 0.95rem;
     z-index: 4;
 
     p {
@@ -410,8 +413,8 @@ body {
       text-transform: uppercase;
       padding: 5px 0;
       display: block;
-      font-size: 1.6rem;
-      letter-spacing: 2px;
+      font-size: 1.5rem;
+      letter-spacing: 1px;
       color: $white;
       text-align: left;
       font-weight: $font-weight-normal;
@@ -474,9 +477,9 @@ body {
   }
 
   // Gradient Background Colors
- 
+
   &[data-background-color="bluish"] {
-    @include set-gradient-background-color(#3600b4, #60AFF0);
+    @include set-gradient-background-color(#3600b4, #60aff0);
   }
 
   // Native Scrollbar (.menu-native-scroll)
@@ -493,7 +496,7 @@ body {
   left: 0;
   right: 0;
   height: calc(var(--vh, 1vh) * 100);
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 997;
   display: none;
 }
@@ -552,7 +555,7 @@ body {
     }
   }
 
-  >.navbar {
+  > .navbar {
     margin-bottom: 0;
   }
 }
@@ -567,7 +570,6 @@ body {
 }
 
 .sidebar-sm {
-
   &.menu-expanded,
   &.menu-open {
     .app-sidebar {
@@ -578,7 +580,6 @@ body {
 }
 
 .sidebar-lg {
-
   &.menu-expanded,
   &.menu-open {
     .app-sidebar {
@@ -597,7 +598,6 @@ body {
 
 @include media-breakpoint-down(md) {
   body.nav-collapsed {
-
     &:not(.sidebar-sm),
     &:not(.sidebar-lg) {
       .navbar {
