--- a/client/src/app/shared/components/side-menu/side-menu.component.html
+++ b/client/src/app/shared/components/side-menu/side-menu.component.html
@@ -32,7 +32,7 @@
             [path]="menuItem.path" level="{{level + 1}}" [hasSub]="menuItem.class.includes('has-sub') ? true: false"
             [ngClass]="{'has-sub': menuItem.class.includes('has-sub') ? true: false}"
             [routerLinkActive]="menuItem.submenu.length != 0 ? 'open' : 'active'"
-            [routerLinkActiveOptions]="{exact: false}">
+            [routerLinkActiveOptions]="{exact: menuItem.isExact}">
             <a appSidebarAnchorToggle *ngIf="menuItem.submenu.length > 0 && !menuItem.isExternalLink">
               <i [ngClass]="[menuItem.icon]"></i>
               <span class="menu-title">{{menuItem.title }}</span>
